fixed overlapped layout

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@ body {
 	width: 100%;
 }
 
-.div-worldMap, .div-barChart, .div-scatterPlot {
+.div-worldMap, .div-barChart-pieChart, .div-scatterPlot {
 	width: calc(96% / 3);
 	display: inline-block;
 	border: 1px #cccccc solid;
@@ -74,6 +74,11 @@ body {
 	margin: 4px;
 }
 
-.bar-label text {
-	font-size: 12px;
+.d3-tip {
+	padding: 6px;
+	margin-bottom: 50px;
+	background: rgba(0,0,0,0.8);
+	color: #fff;
+	border-radius: 4px;
+	font-size: 16px;
 }
